в swagger не работает загрузка из за /
