# docs/swagger.swagger.json
@@ -475,15 +475,21 @@
         ]
       }
     },
-    "/api/v1/finance/export/download/{key}": {
+    "/api/v1/finance/export/download": {
       "get": {
         "operationId": "FinanceService_DownloadExport",
+        "parameters": [
+          {
+            "name": "key",
+            "in": "query",
+            "required": true,
+            "type": "string",
+            "description": "Ключ файла, полученный при экспорте (например: exports/user_1/export_2026-08-30.json)"
+          }
+        ],
         "responses": {
           "200": {
-            "description": "A successful response.",
-            "schema": {
-              "$ref": "#/definitions/financeDownloadExportResponse"
-            }
+            "description": "A successful response."
           },
           "default": {
             "description": "An unexpected error response.",
@@ -492,14 +498,6 @@
             }
           }
         },
-        "parameters": [
-          {
-            "name": "key",
-            "in": "path",
-            "required": true,
-            "type": "string"
-          }
-        ],
         "tags": [
           "FinanceService"
         ]
